--- a/.github/workflows/docker-deploy.yml
+++ b/.github/workflows/docker-deploy.yml
@@ -20,10 +20,17 @@ env:
 jobs:
   build:
     runs-on: ubuntu-latest
+    outputs:
+      version: ${{ steps.version.outputs.version }}
+      create_tag: ${{ steps.version.outputs.create_tag }}
+      short_sha: ${{ steps.meta.outputs.short_sha }}
+      ref_name: ${{ github.ref_name }}
 
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
+      with:
+        fetch-depth: 0  # need tags for versioning
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
@@ -31,6 +38,46 @@ jobs:
     - name: Derive short SHA
       id: meta
       run: echo "short_sha=${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
+
+    - name: Determine build version
+      id: version
+      env:
+        SHORT_SHA: ${{ steps.meta.outputs.short_sha }}
+      run: |
+        set -euo pipefail
+        git fetch --tags
+
+        if [ "${GITHUB_REF_NAME}" != "main" ]; then
+          sanitized_branch="${GITHUB_REF_NAME//\//-}"
+          version="dev-${sanitized_branch}-${SHORT_SHA}"
+          create_tag="false"
+        else
+          current_tag="$(git tag --points-at HEAD "v*" | sort -V | tail -n1 || true)"
+          if [ -n "$current_tag" ]; then
+            version="${current_tag#v}"
+            create_tag="false"
+          else
+            latest_tag="$(git tag -l "v*" | sort -V | tail -n1)"
+            if [ -z "$latest_tag" ]; then
+              next="1.0"
+            else
+              current="${latest_tag#v}"
+              IFS='.' read -r major minor <<<"$current"
+              if [ "$minor" -lt 9 ]; then
+                minor=$((minor + 1))
+              else
+                major=$((major + 1))
+                minor=0
+              fi
+              next="${major}.${minor}"
+            fi
+            version="$next"
+            create_tag="true"
+          fi
+        fi
+
+        echo "version=$version" >> "$GITHUB_OUTPUT"
+        echo "create_tag=$create_tag" >> "$GITHUB_OUTPUT"
 
     - name: Build Docker image (pub-site)
       uses: docker/build-push-action@v5
@@ -45,6 +92,7 @@ jobs:
         cache-to: type=inline
         build-args: |
           VITE_QUIZ_TERMINAL_URL=${{ env.VITE_QUIZ_TERMINAL_URL }}
+          VITE_APP_VERSION=${{ steps.version.outputs.version }}
 
     - name: Build Docker image (quiz terminal)
       uses: docker/build-push-action@v5
@@ -179,52 +227,16 @@ jobs:
       with:
         fetch-depth: 0  # need full history for tags
 
-    - name: Derive short SHA
-      id: meta
-      run: echo "short_sha=${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
-
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
       with:
         username: ${{ secrets.DOCKERHUB_USERNAME }}
         password: ${{ secrets.DOCKERHUB_TOKEN }}
 
-    - name: Determine next version tag
-      id: version
-      run: |
-        set -euo pipefail
-        git fetch --tags
-        current_tag="$(git tag --points-at HEAD "v*" | sort -V | tail -n1 || true)"
-
-        if [ -n "$current_tag" ]; then
-          version="${current_tag#v}"
-          create_tag="false"
-        else
-          latest_tag="$(git tag -l "v*" | sort -V | tail -n1)"
-          if [ -z "$latest_tag" ]; then
-            next="1.0"
-          else
-            current="${latest_tag#v}"
-            IFS='.' read -r major minor <<<"$current"
-            if [ "$minor" -lt 9 ]; then
-              minor=$((minor + 1))
-            else
-              major=$((major + 1))
-              minor=0
-            fi
-            next="${major}.${minor}"
-          fi
-          version="$next"
-          create_tag="true"
-        fi
-
-        echo "version=$version" >> "$GITHUB_OUTPUT"
-        echo "create_tag=$create_tag" >> "$GITHUB_OUTPUT"
-
     - name: Create git tag for release
-      if: steps.version.outputs.create_tag == 'true'
+      if: needs.build.outputs.create_tag == 'true'
       env:
-        VERSION: ${{ steps.version.outputs.version }}
+        VERSION: ${{ needs.build.outputs.version }}
       run: |
         set -euo pipefail
         git fetch --tags
@@ -256,8 +268,8 @@ jobs:
 
     - name: Tag and push pub-site image
       env:
-        VERSION: ${{ steps.version.outputs.version }}
-        SHORT_SHA: ${{ steps.meta.outputs.short_sha }}
+        VERSION: ${{ needs.build.outputs.version }}
+        SHORT_SHA: ${{ needs.build.outputs.short_sha }}
       run: |
         set -euo pipefail
         IMG="${IMAGE_NAME}"
@@ -270,8 +282,8 @@ jobs:
 
     - name: Tag and push quiz terminal image
       env:
-        VERSION: ${{ steps.version.outputs.version }}
-        SHORT_SHA: ${{ steps.meta.outputs.short_sha }}
+        VERSION: ${{ needs.build.outputs.version }}
+        SHORT_SHA: ${{ needs.build.outputs.short_sha }}
       run: |
         set -euo pipefail
         IMG="${TERMINAL_IMAGE}"
@@ -290,10 +302,6 @@ jobs:
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-
-    - name: Derive short SHA
-      id: meta
-      run: echo "short_sha=${GITHUB_SHA::7}" >> "$GITHUB_OUTPUT"
 
     - name: Log in to Docker Hub
       uses: docker/login-action@v3
@@ -320,23 +328,29 @@ jobs:
 
     - name: Push pub-site image (test + commit tag)
       env:
-        SHORT_SHA: ${{ steps.meta.outputs.short_sha }}
+        SHORT_SHA: ${{ needs.build.outputs.short_sha }}
+        VERSION: ${{ needs.build.outputs.version }}
       run: |
         set -euo pipefail
         IMG="${IMAGE_NAME}"
         docker tag "$IMG:test" "$IMG:commit-${SHORT_SHA}"
+        docker tag "$IMG:test" "$IMG:${VERSION}"
         docker push "$IMG:test"
         docker push "$IMG:commit-${SHORT_SHA}"
+        docker push "$IMG:${VERSION}"
 
     - name: Push quiz terminal image (test + commit tag)
       env:
-        SHORT_SHA: ${{ steps.meta.outputs.short_sha }}
+        SHORT_SHA: ${{ needs.build.outputs.short_sha }}
+        VERSION: ${{ needs.build.outputs.version }}
       run: |
         set -euo pipefail
         IMG="${TERMINAL_IMAGE}"
         docker tag "$IMG:test" "$IMG:commit-${SHORT_SHA}"
         docker push "$IMG:test"
         docker push "$IMG:commit-${SHORT_SHA}"
+        docker tag "$IMG:test" "$IMG:${VERSION}"
+        docker push "$IMG:${VERSION}"
 
   deploy-production:
     needs: push-production
